--- a/public/elements/sps-app.html
+++ b/public/elements/sps-app.html
@@ -154,10 +154,12 @@ Example:
         <paper-toolbar>
           <paper-icon-button icon="icons:menu" paper-drawer-toggle></paper-icon-button>
           <span class="title">Senior Presentations - <span>[[pageTitle]]</span></span>
+
+          <!--
           <paper-button on-click="goToPageOnClick" class="smallbuttons" data-page="home"><iron-icon icon="icons:home"></iron-icon><span class="not-small"> Home</span></paper-button>
           <paper-button on-click="goToPageOnClick" class="smallbuttons" data-page="takeaquiz"><iron-icon icon="icons:content-paste"></iron-icon><span class="not-small"> Take A Quiz</span></paper-button>
           
-          <paper-button on-click="goToPageOnClick" class="smallbuttons" data-page="admin"><iron-icon icon="icons:settings"></iron-icon><span class="not-small"> Manage</span></paper-button>
+          <paper-button on-click="goToPageOnClick" class="smallbuttons" data-page="admin"><iron-icon icon="icons:settings"></iron-icon><span class="not-small"> Manage</span></paper-button>-->
           
         </paper-toolbar>
         <div class="layout horizontal">
